# cn-gov-docx

./: LICENSE  README.md  pyproject.toml
src/cn_gov_docx/: __init__.py  core.py
tests/: basic.py  image.py
