[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cn-gov-docx"
version = "0.2.0"
description = "用Python轻松生成符合政府机关常用排版格式的docx文件！"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "dumpingcore" }
]

dependencies = [
    "python-docx>=1.1.0",
    "lxml>=5.0"
]

keywords = [
    "docx",
    "government",
    "word",
    "china",
    "office"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dumpingcore/cn-gov-docx"
Repository = "https://github.com/dumpingcore/cn-gov-docx"
Issues = "https://github.com/dumpingcore/cn-gov-docx/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
